@@ -860,7 +860,7 @@ FUNTAB R_FunTab[] = {
     {"getConnection", do_getconnection, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"getAllConnections", do_getallconnections, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"summary.connection", do_sumconnection, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
-    {"gzcon", do_gzcon, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
+    {"gzcon", do_gzcon, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"memCompress", do_memCompress, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"memDecompress", do_memDecompress, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
 
